chore: 불필요한 로깅 삭제